--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<link rel="manifest" href="manifest.json">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
@@ -8,6 +9,13 @@
     <title>Reflex Rush</title>
     <link rel="stylesheet" href="style.css">
 </head>
+    <script>
+if ('serviceWorker' in navigator) {
+  navigator.serviceWorker.register('pwabuilder-sw.js')
+    .then(() => console.log('Service Worker registered'))
+    .catch((err) => console.error('SW registration failed:', err));
+}
+</script>
 <body>
 
     <!-- Placeholder for AdMob Banner (handled by native wrapper) -->
